# spacegui

./: .gitignore  LICENSE  README.md  SEARCH.md  agent.py  app.py  contract.py  data.pickle  factions.pickle  get_all_data.py  get_complete_data.py  gunicorn.py  main.py  prod_run.py  pyproject.toml  requirements.txt  run.py  sandbox.py  secret.py  session.py  ships.py  system.py  waypoint.py  wsgi.py
.github/: get_map_data.yml
.github/workflows/: azure_deployment.yml  get_map_data.yml  master_spacegui.yml
bp/: ship.py
mapgen/: create_json.py  create_map.py  data.pickle
spacelang/: __init__.py  example.yml
static/: theme.js
templates/: base.html  contract.html  contracts.html  index.html  map.html  ship.html  ships.html  system.html  systems.html  waypoint.html
website/: app.py  config.py  model.py  paginated_return.py  search.py  session.py  wrappers.py
website/bp/: auth.py  contract.py  errors.py  faction.py  local.py  main.py  map.py  search.py  ship.py  system.py
website/frontend/: Cargo.toml  package-lock.json  package.json  webpack.config.js
website/frontend/src/: theme.js
website/frontend/src/js/: Stats.js  map.js  mapUtils.js  select.js  system_map.js  worldInit.js
website/frontend/src/rust/: lib.rs  main.rs  map.rs  util.rs
website/static/: canvas.js  font.typeface.json  main.css  main.js  map.js  map.js.LICENSE.txt  pkg_index_js.js  system_map.js  systems.json
website/templates/: agent.html  agents.html  automation.html  automations.html  base.html  contract.html  contracts.html  create_token.html  get_token.html  index.html  info.html  (+17 more)
(+41 files in other folders)
