[package]
name = "map"
version = "0.1.0"
authors = []
edition = "2021"

[[bin]]
name = "map"
path = "./src/rust/main.rs"

[dependencies]
fltk = { version = "1.0.21", features = ["enable-glwindow"] }
speedy2d = { version = "1.12.0", default-features = true }
gl = "0.14"
image = "0.24.6"
dyn-clone = "1.0.4"
